--- a/dependencies/webview/AndroidManifest.xml
+++ b/dependencies/webview/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="extensions.webview">
-	 <application>
-		<activity
-			    android:name="extensions.webview.WebViewActivity"
-			    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"		    
-	                    android:screenOrientation="landscape">
-                </activity>
-	 </application>
+ <application>
+  <activity
+   android:name="extensions.webview.WebViewActivity"
+   android:theme="@style/FloatingActivityTheme"
+   android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize" />
+ </application>
 </manifest>
