--- a/dependencies/webview/AndroidManifest.xml
+++ b/dependencies/webview/AndroidManifest.xml
@@ -3,6 +3,7 @@
  <application>
   <activity
    android:name="extensions.webview.WebViewActivity"
+   android:hardwareAcceletrated = "true"
    android:theme="@style/FloatingActivityTheme"
    android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize" />
  </application>
