--- a/dependencies/webview/AndroidManifest.xml
+++ b/dependencies/webview/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="extensions.webview">
+<uses-permission android:name="android.permission.INTERNET" />
  <application android:hardwareAccelerated="true">
   <activity
    android:name="extensions.webview.WebViewActivity"
