--- a/dependencies/webview/AndroidManifest.xml
+++ b/dependencies/webview/AndroidManifest.xml
@@ -5,6 +5,7 @@
   <activity
    android:name="extensions.webview.WebViewActivity"
    android:theme="@style/FloatingActivityTheme"
-   android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize" />
+   android:configChanges="keyboardHidden|orientation|screenSize|screenLayout" 
+   android:screenOrientation="sensorLandscape" />
  </application>
 </manifest>
