--- a/dependencies/webview/AndroidManifest.xml
+++ b/dependencies/webview/AndroidManifest.xml
@@ -5,7 +5,6 @@
   <activity
    android:name="extensions.webview.WebViewActivity"
    android:theme="@style/FloatingActivityTheme"
-   android:configChanges="keyboardHidden|orientation|screenSize|screenLayout" 
-   android:screenOrientation="sensorLandscape" />
+   android:configChanges="keyboardHidden|orientation|screenSize|screenLayout" />
  </application>
 </manifest>
