--- a/dependencies/webview/AndroidManifest.xml
+++ b/dependencies/webview/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="extensions.webview">
 <uses-permission android:name="android.permission.INTERNET" />
- <application android:hardwareAccelerated="true">
+ <application
+  android:hardwareAccelerated="true"
+  android:theme="@style/FloatingActivityTheme">
   <activity
+   android:theme="@style/FloatingActivityTheme.Launch">
    android:name="extensions.webview.WebViewActivity"
-   android:theme="@style/FloatingActivityTheme"
-   android:configChanges="keyboardHidden|orientation|screenSize|screenLayout" />
+   android:configChanges="keyboardHidden|orientation|screenSize|screenLayout">
+  </activity>
  </application>
 </manifest>
